--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>  
     <div class="main">
-        <h1>Bienvenidos</h1>
+        <h1>Debe loguearse para ver el contenido</h1>
     </div>
     <script src="./js/main.js"></script>
 </body>
