--- a/productos.html
+++ b/productos.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="description" content="JEC MUSIC, Instrumentos musicales para musicos, bandas, conciertos, escuelas y mas.">
+    <meta name="description" content="JEC MUSIC, nuestros productos, encontra todo lo que buscas.">
    	<meta name="keywords"  content="instrumentos musicales, musica, baterias,guitarras, teclados, musica">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/images/favicon.png">
-    <title>Jec Music | Instrumentos Musicales</title>
+    <title>Jec Music | Productos</title>
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,400;0,500;0,700;0,800;0,900;1,100&display=swap" rel="stylesheet">
     <!--Hojas de estilo-->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/e5fc0451f1.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
@@ -34,7 +34,7 @@
             <div class="menu-superior">
                 <div class="sup-left">
                     <input type="checkbox" id="btn-menu">
-                    <a href="index.html">
+                    <a href="./index.html">
                         <img src="./assets/images/logo.png" alt="Logo JEC Music">
                     </a>
                     <label for="btn-menu">
@@ -71,13 +71,6 @@
                 </div>
             </div>
         </header>
-        <div class="header">
-            <section class="col-md-4 text-header ">
-                <h1>SOMOS JEC MUSIC</h1>
-                <h3>Nos dedicamos a la importación y distribución de Instrumentos Musicales</h3>
-            </section>
-            <div class="wave"><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"></path></svg></div>
-        </div>
         <!-- Fin de Cabecera-->
         <!-- Modal login -->
         <div class="modal-container">
@@ -99,108 +92,80 @@
                                 <input type="password" name="clave" value="" class="form-control" title="Clave" required="">
                             </div>
                             <div class= "form-group col-md-12 mt-4">
-                                <button type="submit" name="submit" class="btn btn-danger" value="" aria-label="LOGIN">Login >></button>
+                                <button type="submit" name="submit" class="btn btn-danger" value="" aria-label="LOGIN">Login >></button>                            </div>
                             </div>
-                        </div>
-                    </form>
+                        </form>
                 </div>
             </div>
-
         </div>
         <!-- Fin Modal login -->
         <!-- Main -->
         <main>
-            <section class="mt-5">
-                <div class="container p-5">
-                    <div class="row">
-                       <div class="col-md-4 about-home">
-                           <img src="./assets/images/elegirnos.svg" class="img-about" alt="Porque elegir jec music">
-                            <div class="about-title">
-                              <h4>PORQUÉ <span>ELEGIRNOS</span>.</h4>
-                            </div>
-                            <p>JEC Music es una compañía con 10 años en el mercado, dedicada a la importación y distribución de instrumentos y accesorios musicales. Nuestra empresa está compuesta por profesionales en ventas, administración, logística, marketing y luthieres especializados en control de calidad y servicio post venta. </p>
-                       </div>
-                       <div class="col-md-4 about-home">
-                            <img src="./assets/images/hacemos.svg" class="img-about" alt="Que hacemos en jec music">
-                            <div class="about-title">
-                                <h4>QUÉ <span>HACEMOS</span>.</h4>
-                            </div>
-                            <p>Nuestra empresa distribuye y representa a lo largo de todo el país marcas de guitarras/bajos, instrumentos de viento, instrumentos de cuerda, pianos y teclados, baterías, platillos, micrófonos, audio y todo tipo de accesorios musicales.</p>
-                        </div>
-                        <div class="col-md-4 about-home">
-                            <img src="./assets/images/distribucion.svg" class="img-about" alt="somos distribuidores, jec music">
-                            <div class="about-title">
-                                <h4>SOMOS <span>DISTRIBUIDORES</span>.</h4>
-                            </div>
-                            <p>Estamos localizados en el oeste del Gran Buenos Aires, a pocos kilómetros del centro, lo que nos permite una ubicación estratégica para la distribución a lo largo del territorio Argentino. </p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <section>
-                <div class="container-fluid p-0">
-                    <div class="video-mid">
-                        <div class="text-video">
-                            <i class="fa-solid fa-gem fa-5x"></i>
-                            <h2>EFNOTE</h2>
-                            <p>Belleza + Calidad + Originalidad</p>
-                            <a href="https://ef-note.com/" target="_blank"><button type="button" class="btn btn-danger">Modelos EFNOTE</button></a>
-                        </div>
-                        <div class="video-wrap">
-                        <video poster="assets/images/exploreEFNOTE.jpg" preload="auto" loop="" autoplay="" muted="">
-                            <source src="./assets/videos/EFNOTE.mp4" type="video/mp4">
-                        </video>
-                        <div class="video-overlay"></div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <div class="container-fluid mid">
-                <h2>Trabajando junto a nuestras marcas 
-                    <a href="./marcas.html">
-                        <strong>Conocé +<i class="fa-solid fa-circle-chevron-right"></i>
-                        </strong>
-                    </a>
-                </h2>
-            </div>
-            <section class="services">
+            <section class="my-5">
+                <h1 class="text-central"><span><i class="fa-brands fa-audible"></i></span>NUESTROS PRODUCTOS!</h1>
                 <div class="container">
-                    <div class="row text-center">
-                        <h2>Actividades &amp; Servicios</h2>
-                        <span>Responsabilidad y compromiso con lo que hacemos.</span>
+                    <div class="row">
+                        <div class="col-11 col-md product">
+                            <a href="https://productos.mjmusic.com.ar/baterias-acusticas-baterias--prod--10114" target="_blank">
+                                <img src="./assets/images/baterias.jpg" class="img-fluid" alt="baterias">
+                                <h3>Baterias</h3>
+                            </a>
+                        </div>
+                        <div class="col-11 col-md product">
+                            <a href="https://productos.mjmusic.com.ar/bajos-electricos-guitarras-y-bajos--prod--10035" target="_blank">
+                                <img src="./assets/images/bajos.jpg" class="img-fluid" alt="bajos">
+                                <h3>Bajos</h3>
+                            </a>
+                        </div>
+                        <div class="col-11 col-md product">
+                            <a href="https://productos.mjmusic.com.ar/sintetizadores-pianos-teclados-sintetizadores--prod--10083" target="_blank">
+                                <img src="./assets/images/teclados.jpg" class="img-fluid" alt="teclados">
+                                <h3>Teclados</h3>
+                            </a>
+                        </div>
                     </div>
-                    <div class="row mt-5">
-                        <div class="col-md-4 mt-2">
-                            <h3><i class="fa-solid fa-calendar"></i>WORKSHOPS Y CLÍNICAS</h3>
-                            <p>Organizamos eventos y presentación de productos por nuestro país, tanto con artistas nacionales como internacionales.</p> 
+                    <div class="row">
+                        <div class="col-11 col-md product">
+                            <a href="https://productos.mjmusic.com.ar/guitarras-electricas-guitarras-y-bajos--prod--10038" target="_blank">
+                                <img src="./assets/images/guitarras.png" class="img-fluid" alt="guitarras">
+                                <h3>Guitarras</h3>
+                            </a>
                         </div>
-                        <div class="col-md-4 mt-2">
-                            <h3><i class="fa-solid fa-chalkboard-user"></i>CAPACITACIONES</h3>
-                            <p>Presentación y lanzamientos de las novedades introducidas por nuestras marcas. Showroom y testeo de productos. Charlas y encuentros con artistas y profesionales del rubro.</p>
+                        <div class="col-11 col-md product">
+                            <a href="https://productos.mjmusic.com.ar/platillos--prod--23" target="_blank">
+                                <img src="./assets/images/platillos.jpg" class="img-fluid" alt="platillos">
+                                <h3>Platillos</h3>
+                            </a>
                         </div>
-                        <div class="col-md-4 mt-2">
-                            <h3><i class="fa-solid fa-chalkboard-user"></i>FERIAS Y EXPOSICIONES</h3>
-                            <p>Exhibición de nuestros productos en ferias, expos y encuentros con el público en general.</p>
+                        <div class="col-11 col-md product">
+                            <a href="https://productos.mjmusic.com.ar/microfonos--prod--14" target="_blank">
+                                <img src="./assets/images/microfonos.jpg" class="img-fluid" alt="microfonos">
+                                <h3>Microfonos</h3>
+                            </a>
                         </div>
-                        
                     </div>
-                    <div class="row mt-5">
-                        <div class="col-md-4 mt-2">
-                            <h3><i class="fa-solid fa-school"></i>EDUCACIÓN</h3>
-                            <p>En JEC Music trabajamos activamente en escuelas de música y conservatorios, desde los primeros niveles hasta su profesionalización.</p> 
+                    <div class="row">
+                        <div class="col-11 col-md product">
+                            <a href="https://productos.mjmusic.com.ar/audio--prod--17" target="_blank">
+                                <img src="./assets/images/audio.jpg" class="img-fluid" alt="audio">
+                                <h3>Audio</h3>
+                            </a>
                         </div>
-                        <div class="col-md-4 mt-2">
-                            <h3><i class="fa-solid fa-star"></i>TRABAJO CON ARTISTAS</h3>
-                            <p>En JEC Music trabajamos actualmente con artistas representantes de la música de nuestro país: Pop, Rock, Folklore, Metal, Jazz, Tango y más.</p>
+                        <div class="col-11 col-md product">
+                            <a href="https://productos.mjmusic.com.ar/accesorios--prod--1" target="_blank">
+                                <img src="./assets/images/accesorios.jpg" class="img-fluid" alt="accesorios">
+                                <h3>Accesorios</h3>
+                            </a>
                         </div>
-                        <div class="col-md-4 mt-2">
-                            <h3><i class="fa-solid fa-gear"></i>SERVICIO TÉCNICO</h3>
-                            <p>Servicio técnico integral de instrumentos acústicos y electrónicos. Luthería. Garantías. Post venta.</p>
-                         </div>
-                        
+                        <div class="col-11 col-md product">
+                            <a href="https://productos.mjmusic.com.ar/estuches-y-fundas--prod--6" target="_blank">
+                                <img src="./assets/images/estuches.png" class="img-fluid" alt="estuches">
+                                <h3>Estuches</h3>
+                            </a>
+                        </div>
                     </div>
-                </div> 
-            </section> 
+                </div>
+            </section>
         </main>
         <!-- Fin Main -->
         <!-- Footer -->
@@ -250,7 +215,7 @@
         <!-- Fin Footer -->
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="./js/main.js"></script>    
+    <script src="./js/main.js"></script>     
 </body>
 <!-- Body -->
 </html>
