Se empeso a agregar articulos y configurar el boton de compra, se añadio libreria sweet alert 2

--- a/productos.html
+++ b/productos.html
@@ -104,65 +104,7 @@
             <section class="my-5">
                 <h1 class="text-central"><span><i class="fa-brands fa-audible"></i></span>NUESTROS PRODUCTOS!</h1>
                 <div class="container">
-                    <div class="row">
-                        <div class="col-11 col-md product">
-                            <a href="https://productos.mjmusic.com.ar/baterias-acusticas-baterias--prod--10114" target="_blank">
-                                <img src="./assets/images/baterias.jpg" class="img-fluid" alt="baterias">
-                                <h3>Baterias</h3>
-                            </a>
-                        </div>
-                        <div class="col-11 col-md product">
-                            <a href="https://productos.mjmusic.com.ar/bajos-electricos-guitarras-y-bajos--prod--10035" target="_blank">
-                                <img src="./assets/images/bajos.jpg" class="img-fluid" alt="bajos">
-                                <h3>Bajos</h3>
-                            </a>
-                        </div>
-                        <div class="col-11 col-md product">
-                            <a href="https://productos.mjmusic.com.ar/sintetizadores-pianos-teclados-sintetizadores--prod--10083" target="_blank">
-                                <img src="./assets/images/teclados.jpg" class="img-fluid" alt="teclados">
-                                <h3>Teclados</h3>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-11 col-md product">
-                            <a href="https://productos.mjmusic.com.ar/guitarras-electricas-guitarras-y-bajos--prod--10038" target="_blank">
-                                <img src="./assets/images/guitarras.png" class="img-fluid" alt="guitarras">
-                                <h3>Guitarras</h3>
-                            </a>
-                        </div>
-                        <div class="col-11 col-md product">
-                            <a href="https://productos.mjmusic.com.ar/platillos--prod--23" target="_blank">
-                                <img src="./assets/images/platillos.jpg" class="img-fluid" alt="platillos">
-                                <h3>Platillos</h3>
-                            </a>
-                        </div>
-                        <div class="col-11 col-md product">
-                            <a href="https://productos.mjmusic.com.ar/microfonos--prod--14" target="_blank">
-                                <img src="./assets/images/microfonos.jpg" class="img-fluid" alt="microfonos">
-                                <h3>Microfonos</h3>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-11 col-md product">
-                            <a href="https://productos.mjmusic.com.ar/audio--prod--17" target="_blank">
-                                <img src="./assets/images/audio.jpg" class="img-fluid" alt="audio">
-                                <h3>Audio</h3>
-                            </a>
-                        </div>
-                        <div class="col-11 col-md product">
-                            <a href="https://productos.mjmusic.com.ar/accesorios--prod--1" target="_blank">
-                                <img src="./assets/images/accesorios.jpg" class="img-fluid" alt="accesorios">
-                                <h3>Accesorios</h3>
-                            </a>
-                        </div>
-                        <div class="col-11 col-md product">
-                            <a href="https://productos.mjmusic.com.ar/estuches-y-fundas--prod--6" target="_blank">
-                                <img src="./assets/images/estuches.png" class="img-fluid" alt="estuches">
-                                <h3>Estuches</h3>
-                            </a>
-                        </div>
+                    <div class="productos row mx-5">
                     </div>
                 </div>
             </section>
@@ -215,7 +157,9 @@
         <!-- Fin Footer -->
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="./js/main.js"></script>     
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/productos.js"></script>     
 </body>
 <!-- Body -->
 </html>
