--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             <li class="logout"><a href="#"><i class="fa-solid fa-arrow-right-to-bracket"></i>Salir</a></li>
                             <li><a href="./carrito.html"><i class="fa-solid fa-bag-shopping"></i>
                                     <strong>
-                                        <span id="cantidad_carrito" class="cantidad_carrito badge">0</span>
+                                        <span id="cant_carrito" class="cantidad_carrito badge">0</span>
                                     </strong>
                                 </a>
                             </li>
@@ -110,8 +110,15 @@
         <!-- Fin Modal login -->
         <!-- Main -->
         <main>
+            <section class="my-1">
+                <h1 class="text-central"><span><i class="fa-solid fa-fire"></i></span>OFERTAS IMPERDIBLES!</h1>
+                <div class="container">
+                    <div class="ofertas row mx-5">
+                    </div>
+                </div>
+            </section>
             <section class="mt-5">
-                <div class="container p-5">
+                <div class="container px-5">
                     <div class="row">
                        <div class="col-md-4 about-home">
                            <img src="./assets/images/elegirnos.svg" class="img-about" alt="Porque elegir jec music">
@@ -134,6 +141,13 @@
                             </div>
                             <p>Estamos localizados en el oeste del Gran Buenos Aires, a pocos kilómetros del centro, lo que nos permite una ubicación estratégica para la distribución a lo largo del territorio Argentino. </p>
                         </div>
+                    </div>
+                </div>
+            </section>
+            <section class="my-5">
+                <h1 class="text-central"><span><i class="fa-solid fa-fire"></i></span>NOVEDADES!</h1>
+                <div class="container">
+                    <div class="novedades row mx-5">
                     </div>
                 </div>
             </section>
@@ -250,7 +264,9 @@
         <!-- Fin Footer -->
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="./js/main.js"></script>    
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/index.js"></script>    
 </body>
 <!-- Body -->
 </html>
