--- a/marcas.html
+++ b/marcas.html
@@ -60,7 +60,7 @@
                             <li class="logout"><a href="#"><i class="fa-solid fa-arrow-right-to-bracket"></i>Salir</a></li>
                             <li><a href="./carrito.html"><i class="fa-solid fa-bag-shopping"></i>
                                     <strong>
-                                        <span id="cantidad_carrito" class="cantidad_carrito badge">0</span>
+                                        <span id="cant_carrito" class="cantidad_carrito badge">0</span>
                                     </strong>
                                 </a>
                             </li>
