Se agrego el resto de las funcionalidades de carrito

--- a/confirmacion.html
+++ b/confirmacion.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="description" content="JEC MUSIC, nuestra historia, mision y vision.">
+    <meta name="description" content="JEC MUSIC, nuestros productos, encontra todo lo que buscas.">
    	<meta name="keywords"  content="instrumentos musicales, musica, baterias,guitarras, teclados, musica">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/images/favicon.png">
-    <title>Jec Music | Nosotros</title>
+    <title>Jec Music | Productos</title>
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">    <!--Hojas de estilo-->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <!--Hojas de estilo-->
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/e5fc0451f1.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
+<!-- Body -->
 <body>
     <div class="container-fluid p-0">
         <!--Cabecera-->
@@ -108,64 +110,90 @@
         <!-- Fin Modal login -->
         <!-- Main -->
         <main>
-            <section>
-                <div class="container mt-5">
-                    <div class="row my-auto ">
-                        <div class="col-11 col-md m-auto">
-                            <div class="row border-bottom">
-                              <h1>Sobre JEC Music</h1>   
-                            </div>
-                            <div class="row pt-5">
-                            <h3>VISIÓN</h3>
-                            <p>Ser referentes para la comunidad como proveedores de instrumentos musicales y equipos de audio e iluminación profesional de alta calidad, trabajando con vocación para responder a las exigencias del público.</p>
-                            <h3>MISIÓN</h3>
-                            <p>Satisfacer las necesidades y superar las expectativas de nuestros clientes a través de la mejora continua, asegurando una rentabilidad que permita un crecimiento sustentable.</p>
-                            <p>Desarrollar nuestro trabajo en un entorno laboral gratificante, dentro de una atmósfera que inspire el desarrollo y la satisfacción profesional así como también el crecimiento personal de nuestro equipo.</p>
-                            <p>Representar con excelencia profesional y responsabilidad a cada uno de nuestros proveedores nacionales e internacionales.</p>
-                            </div>
-                        </div>
-                        <div class="col-12 col-md my-auto img-about">
-                            <img src="./assets/images/nosotros.jpg" class="img-fluid img-nos"alt="acerca de jecmusic">
+            <section class="my-5">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-lg-12 col-md-12 col-sm-12">
+                            <ul class="orderStep">
+                              <li><i class="fa fa-truck "> </i><span>CARRITO / ENTREGA / PAGO</span></li>
+                              <li class="active"><i class="fa fa-check-square "> </i><span>CONFIRMACION DE COMPRA</span></li>
+                            </ul>
                         </div>
                     </div>
-                </div> 
-                <div class="container my-5">
+                    <div class="my-3">
+                        <div class="col-lg-12 col-md-12 col-sm-12 cabCart">
+                            <div class="col-lg-6 col-md-6 col-sm-6 detail">
+                                <h6>CONFIRMACION DE COMPRA - JEC MUSIC</h6>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-sm-6 addArt">
+                                <a href="./index.html" target="_self"><button type="button" class="btn btn-danger"><i class="fa fa-arrow-left"></i> &nbsp; Volver a la Home</button></a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="row">
-                        <div class="col-2 col-lg">
-                            <img src="./assets/images/marcas/Artesia.png" class="img-fluid" alt="artesia">
-                        </div>
-                        <div class="col-2 col-lg">
-                            <img src="./assets/images/marcas/Audix.png" class="img-fluid" alt="audix">
-                        </div>
-                        <div class="col-2 col-lg">
-                            <img src="./assets/images/marcas/Cherub.png" class="img-fluid" alt="cherub">
-                        </div>
-                        <div class="col-2 col-lg">
-                            <img src="./assets/images/marcas/Stagg.png" class="img-fluid" alt="stagg">
-                        </div>
-                        <div class="col-2 col-lg">
-                            <img src="./assets/images/marcas/Promark.png" class="img-fluid" alt="promark">
-                        </div>
-                        <div class="col-2 col-lg">
-                            <img src="./assets/images/marcas/Puresound.png" class="img-fluid" alt="puresound">
-                        </div>
-                        <div class="col-2 col-lg">
-                            <img src="./assets/images/marcas/EFNOTE.png" class="img-fluid" alt="efnote">
-                        </div>
-                        <div class="col-2 col-lg">
-                            <img src="./assets/images/marcas/Sabian.png" class="img-fluid" alt="sabian">
-                        </div>
-                        <div class="col-2 col-lg">
-                            <img src="./assets/images/marcas/EvansDrumheads.png" class="img-fluid" alt="evansdrumhead">
-                        </div>
-                        <div class="col-2 col-lg">
-                            <img src="./assets/images/marcas/LaBellaStrings.png" class="img-fluid" alt="labellastrings">
-                        </div>
-                        <div class="col-2 col-lg">
-                            <img src="./assets/images/marcas/Dixon.png" class="img-fluid" alt="dixon">
-                        </div>
-                        <div class="col-2 col-lg">
-                            <img src="./assets/images/marcas/Sonor.png" class="img-fluid" alt="sonor">
+                        <div class="col-lg-12 col-md-12 col-sm-12">
+                            <div class="d-flex justify-content-center">
+                                <div class="col-md-6">
+                                    <div class="col-12 my-3">
+                                        <div class="col-lg-12 col-md-12 col-sm-12 cabCart">
+                                            <div class="detail mx-auto">
+                                                <h6 id="msjConfirmacion">Gracias por tu Compra!</h6>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <table class="table-bordered table">
+                                        <tbody id="formConf">
+                                            <tr class="CartProduct">
+                                                <td colspan="3" class="hidden-xs"><strong>Pedido N°</strong></td>
+                                            </tr>
+                                            <tr>
+                                                <td class="hidden-xs">Nombre:</td>
+                                                <td id="confNombre"></td>
+                                            </tr>
+                                            <tr>
+                                                <td class="hidden-xs">Apellido:</td>
+                                                <td id="confApellido"></td>
+                                            </tr>
+                                            <tr>
+                                                <td class="hidden-xs">E-mail:</td>
+                                                <td id="confEmail"></td>
+                                            </tr>
+                                            <tr>
+                                                <td class="hidden-xs">Telefono:</td>
+                                                <td id="confTelefono"></td>
+                                            </tr>
+                                            <tr>
+                                                <td class="hidden-xs">Provincia:</td>
+                                                <td id="confProvincia"></td>
+                                            </tr>
+                                            <tr>
+                                                <td class="hidden-xs">País:</td>
+                                                <td id="confPais"></td>
+                                            </tr>
+                                            <tr>
+                                                <td class="hidden-xs">Forma de Entrega:</td>
+                                                <td id="confDry"><strong></strong></td>
+                                            </tr>
+                                            <tr>
+                                                <td class="hidden-xs">Forma de pago:</td>
+                                                <td id="confPago"></td>
+                                            </tr>
+                                            <tr>
+                                                <td class="hidden-xs"><strong>Total:</strong></td>
+                                                <td id="confTotal"></td>
+                                            </tr>
+                                            <tr>
+                                                <tr class="CartProduct">
+                                                    <td colspan="3" class="hidden-xs">
+                                                        <p class="text-center px-5">Te contactaremos via mail para coordinar el pago del pedido y la entrega de los productos.<br>Gracias por confiar en Nosotros!!<br>JECMUSIC</p>
+                                                        <a href="./index.html" target="_self"><button type="button" class="btn btn-danger">Volver a la Home</button></a>
+                                                    </td>
+                                                </tr>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -219,7 +247,9 @@
         <!-- Fin Footer -->
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="./js/main.js"></script>     
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/confirmacion.js"></script>     
 </body>
 <!-- Body -->
 </html>
