--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,400;0,500;0,700;0,800;0,900;1,100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <!--Hojas de estilo-->
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/e5fc0451f1.js" crossorigin="anonymous"></script>
@@ -33,18 +33,27 @@
             </div>
             <div class="menu-superior">
                 <div class="sup-left">
-                    <input type="checkbox" id="btn-menu">
-                    <a href="index.html">
+                    <a href="./index.html">
                         <img src="./assets/images/logo.png" alt="Logo JEC Music">
                     </a>
-                    <label for="btn-menu">
+                    <div id="btn-menu">
                         <span><i class="fa-solid fa-bars"></i></span>
-                    </label>
+                    </div>
                 </div>
                 <div class="sup-right">
                     <nav class="menu">
                         <ul>
-                            <li><a href="./productos.html">PRODUCTOS</a></li>
+                            <div>
+                                <li id="drop"><a id="productosFull" href="./productos.html">PRODUCTOS</a></li>
+                                <ul class="categ-menu d-none">
+                                    <li><a id="accesorios" href="./productos.html">Accesorios</a></li>
+                                    <li><a id="baterias" href="./productos.html">Baterias</a></li>
+                                    <li><a id="bajos" href="./productos.html">Bajos</a></li>
+                                    <li><a id="guitarras" href="./productos.html">Guitarras</a></li>
+                                    <li><a id="teclados" href="./productos.html">Teclados</a></li>
+                                    <li><a id="sonido" href="./productos.html">Sonido</a></li>
+                                </ul>
+                            </div>
                             <li><a href="./marcas.html">MARCAS</a></li>
                             <li><a href="./nosotros.html">NOSOTROS</a></li>
                             <li><a href="./contacto.html">CONTACTO</a></li>
@@ -76,7 +85,7 @@
                 <h1>SOMOS JEC MUSIC</h1>
                 <h3>Nos dedicamos a la importación y distribución de Instrumentos Musicales</h3>
             </section>
-            <div class="wave"><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"></path></svg></div>
+            <div class="wave" id="hash"><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"></path></svg></div>
         </div>
         <!-- Fin de Cabecera-->
         <!-- Modal login -->
@@ -110,10 +119,10 @@
         <!-- Fin Modal login -->
         <!-- Main -->
         <main>
-            <section class="my-1">
+            <section class="my-1" id="ofertas">
                 <h1 class="text-central"><span><i class="fa-solid fa-fire"></i></span>OFERTAS IMPERDIBLES!</h1>
                 <div class="container">
-                    <div class="ofertas row mx-5">
+                    <div class="ofertas row mx-1">
                     </div>
                 </div>
             </section>
@@ -147,7 +156,7 @@
             <section class="my-5">
                 <h1 class="text-central"><span><i class="fa-solid fa-fire"></i></span>NOVEDADES!</h1>
                 <div class="container">
-                    <div class="novedades row mx-5">
+                    <div class="novedades row mx-1">
                     </div>
                 </div>
             </section>
