--- a/contacto.html
+++ b/contacto.html
@@ -11,8 +11,7 @@
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,400;0,500;0,700;0,800;0,900;1,100&display=swap" rel="stylesheet">
-    <!--Hojas de estilo-->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">    <!--Hojas de estilo-->
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/e5fc0451f1.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -32,18 +31,27 @@
             </div>
             <div class="menu-superior">
                 <div class="sup-left">
-                    <input type="checkbox" id="btn-menu">
                     <a href="./index.html">
                         <img src="./assets/images/logo.png" alt="Logo JEC Music">
                     </a>
-                    <label for="btn-menu">
+                    <div id="btn-menu">
                         <span><i class="fa-solid fa-bars"></i></span>
-                    </label>
+                    </div>
                 </div>
                 <div class="sup-right">
                     <nav class="menu">
                         <ul>
-                            <li><a href="./productos.html">PRODUCTOS</a></li>
+                            <div>
+                                <li id="drop"><a id="productosFull" href="./productos.html">PRODUCTOS</a></li>
+                                <ul class="categ-menu d-none">
+                                    <li><a id="accesorios" href="./productos.html">Accesorios</a></li>
+                                    <li><a id="baterias" href="./productos.html">Baterias</a></li>
+                                    <li><a id="bajos" href="./productos.html">Bajos</a></li>
+                                    <li><a id="guitarras" href="./productos.html">Guitarras</a></li>
+                                    <li><a id="teclados" href="./productos.html">Teclados</a></li>
+                                    <li><a id="sonido" href="./productos.html">Sonido</a></li>
+                                </ul>
+                            </div>
                             <li><a href="./marcas.html">MARCAS</a></li>
                             <li><a href="./nosotros.html">NOSOTROS</a></li>
                             <li><a href="./contacto.html">CONTACTO</a></li>
@@ -113,7 +121,7 @@
                             </div>
                             <h5 class="mt-5"><strong>Formulario de Contacto</strong></h5>
                             <p>Por favor complete el formulario para dejar su consulta o comentario.</p>
-                            <div class="row">
+                            <form class="row">
                                 <div class="form-group col-md-4">
                                     <label>Nombre</label>
                                     <input type="text" name="nombre" autofocus="" value="" class="form-control" title="Nombre" required="">
@@ -124,7 +132,7 @@
                                 </div>
                                 <div class="form-group col-md-4">
                                     <label>E-mail:</label>
-                                    <input type="email" name="email" value="" class="form-control" title="E-mail:" required="">
+                                    <input type="email" name="email" value="" class="form-control" title="E-mail:" c>
                                 </div>
                                 <div class="form-group col-md-4">
                                     <label>Teléfono:</label>
@@ -141,7 +149,6 @@
                                 <div class="form-group col-md-4 col-sm-4 col-xs-12 mt-3">
                                 <button type="submit" name="Submit" class="btn btn-danger" aria-label="ENVIAR">ENVIAR</button>
                                 </div>
-                            </div>
                             </form>
                             <div class="col">
                                 <iframe class="my-5" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3281.7873019635226!2d-58.56411608417346!3d-34.6600741679904!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc7d09a8ebb39%3A0x5bf42ffcf22c2dee!2sAv.%20de%20Mayo%201882%2C%20B1704BVS%20Ramos%20Mej%C3%ADa%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1645485391396!5m2!1ses-419!2sar" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
