--- a/marcas.html
+++ b/marcas.html
@@ -11,8 +11,7 @@
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,400;0,500;0,700;0,800;0,900;1,100&display=swap" rel="stylesheet">
-    <!--Hojas de estilo-->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">    <!--Hojas de estilo-->
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/e5fc0451f1.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -32,18 +31,27 @@
             </div>
             <div class="menu-superior">
                 <div class="sup-left">
-                    <input type="checkbox" id="btn-menu">
                     <a href="./index.html">
                         <img src="./assets/images/logo.png" alt="Logo JEC Music">
                     </a>
-                    <label for="btn-menu">
+                    <div id="btn-menu">
                         <span><i class="fa-solid fa-bars"></i></span>
-                    </label>
+                    </div>
                 </div>
                 <div class="sup-right">
                     <nav class="menu">
                         <ul>
-                            <li><a href="./productos.html">PRODUCTOS</a></li>
+                            <div>
+                                <li id="drop"><a id="productosFull" href="./productos.html">PRODUCTOS</a></li>
+                                <ul class="categ-menu d-none">
+                                    <li><a id="accesorios" href="./productos.html">Accesorios</a></li>
+                                    <li><a id="baterias" href="./productos.html">Baterias</a></li>
+                                    <li><a id="bajos" href="./productos.html">Bajos</a></li>
+                                    <li><a id="guitarras" href="./productos.html">Guitarras</a></li>
+                                    <li><a id="teclados" href="./productos.html">Teclados</a></li>
+                                    <li><a id="sonido" href="./productos.html">Sonido</a></li>
+                                </ul>
+                            </div>
                             <li><a href="./marcas.html">MARCAS</a></li>
                             <li><a href="./nosotros.html">NOSOTROS</a></li>
                             <li><a href="./contacto.html">CONTACTO</a></li>
